Made page layout. Added Title/etc boxes for AddMusic.

--- a/src/Components/SearchMusic/SearchMusic.module.css
+++ b/src/Components/SearchMusic/SearchMusic.module.css
@@ -1,1 +1,8 @@
 /* I should write a program to automatically add .jsx and .module.css when I make a component folder. */
+
+.formContainer {
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark grey background */
+    padding: 20px;
+    border-radius: 20px;
+  }
+  
