--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,20 +1,28 @@
-/**
- * @module App.module.css
- */
-
-/* The root container for the app, using flex for layout and filling the viewport height */
 .app {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; 
-    overflow: hidden; 
-  }
-  
-  /* The main content area, with a specific background color, allowing it to grow to fill available space, and set to auto overflow */
-  .main {
-    background-color: #d1e0e8;
-    flex-grow: 1;
-    overflow: auto;
-    margin-top: 3em; /* Offset to account for the fixed header */
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #808080;
+  height: 100vh;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap; /* Allow the rectangles to wrap to the next line if the screen is too narrow */
+  padding-top: 3em; /* Push content below the fixed header */
+  flex-grow: 1;
+
+}
+
+.rectangle {
+  width: 200px;
+  height: 100px;
+  background-color: #ffffff;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
