Added Search dropdown for filtering.

--- a/src/Components/SearchMusic/SearchMusic.module.css
+++ b/src/Components/SearchMusic/SearchMusic.module.css
@@ -24,3 +24,10 @@
   background-color: #9daf4c;
   color: white;
 }
+
+.searchContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
