--- a/src/Components/AddMusic/AddMusic.module.css
+++ b/src/Components/AddMusic/AddMusic.module.css
@@ -1,9 +1,9 @@
 .formContainer {
-  background-color: rgba(45, 95, 187, 0.5);
+  background-color: rgba(20, 78, 185, 0.9);
   padding: 80px;
   border-radius: 20px;
+  color: white;
 }
 .formContainer label {
   margin-right: 20px;
 }
-
