--- a/src/Components/SearchMusic/SearchMusic.module.css
+++ b/src/Components/SearchMusic/SearchMusic.module.css
@@ -4,8 +4,8 @@
   align-items: stretch;
   gap: 20px;
   margin: 20px;
-  background-color: rgba(45, 95, 187, 0.5);
-  padding: 80px;
+  background-color: rgba(20, 78, 185, 0.9);
+  padding: 60px;
   border-radius: 20px;
   width: 600px;
 }
@@ -15,13 +15,15 @@
   width: 100%;
 }
 
-.musicTable th, .musicTable td {
+.musicTable th,
+.musicTable td {
   padding: 8px;
   text-align: center;
+  color: white;
 }
 
 .musicTable th {
-  background-color: #274cc5;
+  background-color: #ffac2f;
   color: white;
 }
 
@@ -29,7 +31,6 @@
 .musicTable th:nth-child(7) {
   background-color: transparent;
 }
-
 
 .searchContainer {
   display: flex;
@@ -41,7 +42,6 @@
 .tableWrapper {
   height: 235px; /* Fits 5 rows */
   overflow-y: auto; /* Makes a scrollbar after 5 rows */
-
 }
 
 .button-container {
