Added date filtering. Tried to add arrows to show current sorting, but material-ui doesn't work with React 18.

--- a/src/Components/SearchMusic/SearchMusic.module.css
+++ b/src/Components/SearchMusic/SearchMusic.module.css
@@ -58,3 +58,9 @@
 .noData {
   text-align: center;
 }
+
+.checkboxContainer {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
